# my_robot

./: CMakeLists.txt  README.md  my_robot.xml  package.xml
ROSArduinoBridge/: motor_driver.h  motor_driver.ino
config/: my_controllers.yaml  nav2_params.yaml  robot.rviz  twist_mux.yaml
description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_body.xacro  ros2_control.xacro
drive-download-20240324T122411Z-001/: fireDetection.py
include/: my_robot_system.cpp
include/my_robot/: arduino_comms.hpp  my_robot_system.hpp  visibility_control.h  wheel.hpp
launch/: bringup_launch.py  camera.launch.py  real_navigation.launch.py  real_robot.launch.py  robot_state_publisher.launch.py  sim_navigation.launch.py  simulation.launch.py  slam_launch.py
nodemcu_code/: flame_sensor.ino
scripts/: camera_detect.py  fire_detect copy.py  fire_detect.py  navigate_to_fire.py  obstacle_avoid.py  py_node.py  sim_single_nav.py  simple_fire_detect.py  single_nav.py  single_nav_fire copy.py  single_nav_fire.py
world/: gazebo_worl.world
